KeePassDX(2.8.4)
 * Fix incomplete attachment deletion #684

KeePassDX(2.8.3)
 * Upload attachments
 * Visibility button for each hidden field
 * Fix read header file
 * Fix deletion in KDB database
 * Fix minor issues

KeePassDX(2.8.2)
 * Fix themes / new UI
 * Fix multiples notifications
 * Fix entry in Magikeyboard memory
 * Fix biometric view visibility
 * Fix fields order
 * Upgrade code with ViewModel and LiveData

KeePassDX(2.8.1)
 * Capture exceptions in coroutines

KeePassDX(2.8)
 * Fix TOTP period (> 60s)
 * Fix searching in recycle bin
 * Settings to back to the previous keyboard during database credentials and after form filling
 * Improve action tasks
 * Improve recognition to reset app timeout
 * Fix minor issues

KeePassDX(2.7)
 * Add blocklists for autofill
 * Add autofill compatibility mode (usefull for Browser not compatible)
 * Upgrade autofill recognition algorithm
 * Setting to search through web subdomains
 * Refactoring selection mode

KeePassDX(2.6)
 * Share a web domain to automatically search for an entry
 * Default group icon for a new entry
 * Better autofill recognition
 * Fix entry not visually deleted in search
 * Fix hanged loading dialog
 * Fix auto open biometric prompt if comes from background
 * Minor fixes

KeePassDX(2.5)
 * First stable version of KeePassDX
 * Fork completely rewritten from the KeePassDroid project
 * Fix small issues from the last Release Candidate

KeePassDX(2.5RC2)
 * Replacement of Spongy Castle by Bouncy Castle
 * Update Autofill compatibility
 * Fix Magikeyboard "Go" action
 * Fix KeeWeb database opening
 * Fix default username
 * Fix themes
 * Fix small issues

KeePassDX(2.5RC1)
 * Add write permission to keep compatibility with old file managers
 * Fix autofill for apps
 * Auto search for autofill
 * New keyfile input
 * Icon to hide keyfile input
 * New lock button
 * Setting to hide lock button in user interface
 * Clickable links in notes
 * Fix autofill for key-value pairs

KeePassDX(2.5beta30)