@@ -1,1 +1,2 @@
  * Fix incomplete attachment deletion #684
+ * Fix opening database v1 without backup folder #692
